--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Freeman Jiang</title>
-        <meta name="description" content="Hey there! I'm Freeman Jiang, a 16 year old innovator from Ottawa looking to solve the world's biggest problems with emerging technologies!"/>
-        <meta name="keywords" content="" />
+        <meta name="description" content="Hey! I'm Freeman Jiang, a 16-year-old Innovator from Ottawa, Canada. I'm passionate about using emerging technologies to help solve problems and empower people around the world. With the technology we have just today, we're able to do things that weren't even considered possible fifty years ago. We are actively living in an era of transformative change happening at a rate that we have NEVER seen before. The moment I realized this fact—that the people of today were going to be the pioneers of the future—I knew I wanted to be one of them. I'm currently expanding my breadth of knowledge in topics such as Artificial Intelligence, Virtual/Augmented Reality, Gene Editing, and BCIs."/>
+        <meta name="keywords" content="FreemanJiang, Freeman, Jiang, Innovator, Young Innovator, TKS, The Knowledge Society, TKS Ottawa, The Knowledge Society Ottawa, Young" />
         <meta name="author" content="Freeman Jiang"/>
 
         <link rel="shortcut icon" href="images/favicon.ico">
