--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Quicksand|Source+Sans+Pro&display=swap" rel="stylesheet">
         
         <!-- Mailchimp-->
-        <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"05f451576c043fa3d2868583a","lid":"187db81baa","uniqueMethods":true}) })</script>
+        <script SameSite="none" type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"05f451576c043fa3d2868583a","lid":"187db81baa","uniqueMethods":true}) })</script>
     </head>
 
     <body>
