--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             </div>
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold">Text/Call</h5>
-                                <p class="text-muted">+1 613 825 7066</p>
+                                <p class="text-muted">Available Upon Request</p>
                             </div>
                         </div>
                     </div>
