--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="col-lg-12">
                                 <div class="text-center header-content mx-auto">
                                     <h4 class="text-white first-title mb-4 myheader-title">Freeman Jiang</h4>
-                                    <h1 class="header-name text-white mb-0" id="mysmaller"><span class="element" data-elements="Machine Learning Developer., Virtual/Augmented Reality Enthusiast.,Innovator at The Knowledge Society.,"></span></h1>
+                                    <h1 class="header-name text-white mb-0" id="mysmaller"><span class="element" data-elements="Innovator at The Knowledge Society., Virtual/Augmented Reality Enthusiast.,Machine Learning Developer.,"></span></h1>
                                     <p class="text-white mx-auto header-desc mt-4 mydescription">16-year-old Innovator from Ottawa, Canada</p>
                                     <div class="mt-4 pt-2">
                                         <a href="https://tks.life/profile/freeman.jiang" target="blank" class="btn btn-outline-custom btn-round">View My Portfolio</a>
