--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
         <!-- Mailchimp-->
         <script SameSite="none" type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"05f451576c043fa3d2868583a","lid":"187db81baa","uniqueMethods":true}) })</script>
+
     </head>
 
     <body>
@@ -100,6 +101,7 @@
                                     <p class="text-white mx-auto header-desc mt-4 mydescription">16-year-old Innovator from Ottawa, Canada</p>
                                     <div class="mt-4 pt-2">
                                         <a href="https://tks.life/profile/freeman.jiang" target="blank" class="btn btn-outline-custom btn-round">View My Portfolio</a>
+
                                     </div>
                                 </div>
                             </div>
@@ -133,6 +135,7 @@
                                     <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/freeman-jiang-50b325190/"><i class="mdi mdi-linkedin"></i></a></li>
                                     <li class="list-inline-item"><a target="blank" href="https://tks.life/profile/freeman.jiang"><i class="mdi mdi-folder-open"></i></a></li>
                                     <li class="list-inline-item"><a target="blank" href="https://soundcloud.com/sevenaries"><i class="mdi mdi-soundcloud"></i></a></li>
+
                                 </ul>
                             </div>
                         </div>
@@ -377,6 +380,13 @@
                             <h2><span class="font-weight-bold">Contact</span> Me</h2>
                             <p class="text-muted mx-auto section-subtitle mt-3">Get in touch! I'd love to meet you! I usually respond in 1-2 days.<p>
                         </div>
+                        <!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+<center>
+<a href="" class= "btn btn-custom calendly-btn" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/freeman-jiang-ca/braindates'});return false;">Schedule A Meeting</a>
+</center>
+<!-- Calendly link widget end -->
                     </div>
                 </div>
                 <div class="row mt-5">
