--- a/index.html
+++ b/index.html
@@ -208,24 +208,50 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mt-5 ">
+                    <ul class="col list-unstyled list-inline mb-0 text-uppercase work_menu" id="menu-filter">
+                        <li class="list-inline-item"><a class="active" data-filter="*">All</a></li>
+                        <li class="list-inline-item"><a class="" data-filter=".personal">Personal</a></li>
+                        <!---
+                        <li class="list-inline-item"><a class="" data-filter=".webdesign">Webdesign</a></li>
+                        <li class="list-inline-item"><a class="" data-filter=".WORK">WORK</a></li>
+                        <li class="list-inline-item"><a class="" data-filter=".wordpress">Wordpress</a></li>
+                      -->
+                    </ul>
+                </div>
             </div>
+
             <div class="container">
                 <div class="row mt-4 work-filter">
-                    <div class="col-lg-6 work_item webdesign wordpress">
-                        <a href="images/works/1.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/1.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Personal</p>
-                                    <h4 class="mb-0"><a class="bold none work" target="blank" href="https://mailchi.mp/5d664bc9653a/freeman-jiang-september-newsletter">September Newsletter</a></h4>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+                  <div class="col-lg-4 work_item personal">
+                      <a href="images/works/3.jpg" class="img-zoom">
+                          <div class="work_box">
+                              <div class="work_img">
+                                  <img src="images/works/3.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                              </div>
+                              <div class="work_detail">
+                                  <p class="mb-2">Personal</p>
+                                  <h4 class="mb-0"><a class="none work" target="blank" href="https://mailchi.mp/69542a19241c/october-newsletter-2019">October Newsletter</a></h4>
+                              </div>
+                          </div>
+                      </a>
+                  </div>
 
-                    <div class="col-lg-6 work_item WORK webdesign seo">
+                  <div class="col-lg-4 work_item personal">
+                      <a href="images/works/1.jpg" class="img-zoom">
+                          <div class="work_box">
+                              <div class="work_img">
+                                  <img src="images/works/1.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                              </div>
+                              <div class="work_detail">
+                                  <p class="mb-2">Personal</p>
+                                  <h4 class="mb-0"><a class="none work" target="blank" href="https://mailchi.mp/5d664bc9653a/freeman-jiang-september-newsletter">September Newsletter</a></h4>
+                              </div>
+                          </div>
+                      </a>
+                  </div>
+
+                    <div class="col-lg-4 work_item">
                         <a href="images/works/2.jpg" class="img-zoom">
                             <div class="work_box">
                                 <div class="work_img">
@@ -233,17 +259,18 @@
                                 </div>
                                 <div class="work_detail">
                                     <p class="mb-2">SHAD Western 2019</p>
-                                    <h4 class="mb-0">Electronic Waste Management Design Challenge</h4>
+                                    <h4 class="mb-0">Design Challenge: Electronic Waste Management Solution</h4>
                                 </div>
                             </div>
                         </a>
                     </div>
+
 <!--
-                    <div class="col-lg-4 work_item seo wordpress">
-                        <a href="images/works/3.jpg" class="img-zoom">
+                    <div class="col-lg-4 work_item wordpress WORK webdesign">
+                        <a href="images/works/4.jpg" class="img-zoom">
                             <div class="work_box">
                                 <div class="work_img">
-                                    <img src="images/works/3.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                    <img src="images/works/4.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
                                 </div>
                                 <div class="work_detail">
                                     <p class="mb-2">Category</p>
@@ -252,6 +279,85 @@
                             </div>
                         </a>
                     </div>
+
+                    <div class="col-lg-4 work_item seo webdesign">
+                        <a href="images/works/5.jpg" class="img-zoom">
+                            <div class="work_box">
+                                <div class="work_img">
+                                    <img src="images/works/5.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                </div>
+                                <div class="work_detail">
+                                    <p class="mb-2">Category</p>
+                                    <h4 class="mb-0">Project Title</h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-4 work_item devlopment webdesign">
+                        <a href="images/works/6.jpg" class="img-zoom">
+                            <div class="work_box">
+                                <div class="work_img">
+                                    <img src="images/works/6.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                </div>
+                                <div class="work_detail">
+                                    <p class="mb-2">Category</p>
+                                    <h4 class="mb-0">Project Title</h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                  -->
+                </div>
+            </div>
+<!--
+            <div class="container">
+              <div class="col-lg-4 work_item personal">
+                  <a href="images/works/3.jpg" class="img-zoom">
+                      <div class="work_box">
+                          <div class="work_img">
+                              <img src="images/works/3.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                          </div>
+                          <div class="work_detail">
+                              <p class="mb-2">Personal</p>
+                              <h4 class="mb-0">October Newsletter</h4>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+
+              <div class="col-lg-4 work_item personal">
+                  <a href="images/works/1.jpg" class="img-zoom">
+                      <div class="work_box">
+                          <div class="work_img">
+                              <img src="images/works/1.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                          </div>
+                          <div class="work_detail">
+                              <p class="mb-2">Personal</p>
+                              <h4 class="mb-0"><a class="bold none work" target="blank" href="https://mailchi.mp/5d664bc9653a/freeman-jiang-september-newsletter">September Newsletter</a></h4>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+
+              <div class="col-lg-4 work_item personal">
+                  <a href="images/works/2.jpg" class="img-zoom">
+                      <div class="work_box">
+                          <div class="work_img">
+                              <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                          </div>
+                          <div class="work_detail">
+                              <p class="mb-2">SHAD Western 2019</p>
+                              <h4 class="mb-0">Electronic Waste Management Design Challenge</h4>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+            </div>
+-->
+
+
+<!--
 
                     <div class="col-lg-4 work_item wordpress WORK webdesign">
                         <a href="images/works/4.jpg" class="img-zoom">
@@ -312,7 +418,7 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-lg-12 mt-3">
+                    <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
                                 <img src="images/blog/blog-1.png" alt="BCIS: Merging Mind and Machine" class="img-fluid rounded mx-auto d-block">
@@ -322,27 +428,27 @@
                                     <h5 class="font-weight-bold mb-0"><a target="blank" href="https://medium.com/swlh/bcis-merging-mind-and-machine-cef4e77d4eb0" class="text-dark">BCIs: Merging Mind and Machine</a></h5>
                                 </div>
                                 <div class="mt-3">
-                                    <p class="h6 text-muted date_blog mb-0">Oct 2, 2019 <a href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold">By Freeman</a></p>
+                                    <p class="h6 text-muted date_blog mb-0">Oct 2, 2019 <a href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold"></a></p>
                                     <p class="mt-3 desc_blog text-muted">Combining technology with humanity's most powerful tool: the human mind.</p>
                                     <button type="button" class="btn btn-custom"><a target="blank" href="https://medium.com/swlh/bcis-merging-mind-and-machine-cef4e77d4eb0" class="mybutton">Read More...</a></button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--
+
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="images/blog/blog-2.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="images/blog/blog-2.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog pt-3 pb-3">
                                 <div>
-                                    <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Neural Network Dreams: Computer Imagination</a></h5>
+                                    <h5 class="font-weight-bold mb-0"><a target="blank" href="https://medium.com/towards-artificial-intelligence/hey-siri-how-can-you-understand-me-5c00da8d9ead" class="text-dark">Hey Siri, How Can You Understand Me?</a></h5>
                                 </div>
                                 <div class="mt-3">
-                                    <p class="h6 text-muted date_blog mb-0">Oct XX, 2019 <a href="#" class="text-custom font-weight-bold">By Freeman</a></p>
-                                    <p class="mt-3 desc_blog text-muted"></p>
-                                    <button type="button" class="btn btn-custom" disabled>Read More...</button>
+                                    <p class="h6 text-muted date_blog mb-0">Nov 5, 2019 <a href="#" class="text-custom font-weight-bold"></a></p>
+                                    <p class="mt-3 desc_blog text-muted">Exploring natural language processing algorithms in AI</p>
+                                    <button type="button" class="btn btn-custom"><a target="blank" class="mybutton" href="https://medium.com/towards-artificial-intelligence/hey-siri-how-can-you-understand-me-5c00da8d9ead" > Read More...</a></button>
                                 </div>
                             </div>
                         </div>
@@ -350,21 +456,22 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="images/blog/blog-2.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="images/blog/blog-3.jpg" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog pt-3 pb-3">
                                 <div>
-                                    <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Nanotechnology: Building Atomic-Level Machines</a></h5>
+                                    <h5 class="font-weight-bold mb-0"><a target="blank" href="https://medium.com/@freeman.jiang/what-i-learned-from-a-visit-to-shopify-hq-3f1451209435" class="text-dark">What I Learned From A Visit To Shopify HQ</a></h5>
                                 </div>
                                 <div class="mt-3">
-                                    <p class="h6 text-muted date_blog mb-0">Nov XX, 2019 <a href="#" class="text-custom font-weight-bold">By Freeman</a></p>
-                                    <p class="mt-3 desc_blog text-muted"></p>
-                                    <button type="button" class="btn btn-custom" disabled>Read More...</button>
+                                    <p class="h6 text-muted date_blog mb-0">Nov 12, 2019 <a href="#" class="text-custom font-weight-bold"></a></p>
+                                    <p class="mt-3 desc_blog text-muted">Had the amazing opportunity to visit Shopify's headquarters in Ottawa. Here's what I learned!</p>
+                                    <button type="button" class="btn btn-custom" ><a target="blank" class="mybutton" href="https://medium.com/@freeman.jiang/what-i-learned-from-a-visit-to-shopify-hq-3f1451209435">Read More...</a></button>
                                 </div>
                             </div>
                         </div>
                     </div>
--->
+
+
                 </div>
             </div>
         </section>
