--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
         <!-- Magnific-popup -->
         <link rel="stylesheet" href="css/magnific-popup.css">
 
+        <!-- Animation Css -->
+        <link rel="stylesheet" href="css/aos.css">
+
+        <!-- Animate Css -->
+        <link rel="stylesheet" href="css/animate.min.css">
+
         <!-- OWL SLIDER -->
         <link rel="stylesheet" href="css/owl.carousel.css" />
         <link rel="stylesheet" href="css/owl.theme.css" />
         <link rel="stylesheet" href="css/owl.transitions.css" />
 
         <!-- Custom style Css -->
+        <link href="css/custom.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/color/green.css" rel="stylesheet">
 
@@ -108,6 +115,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="scroll_down">
+                <a href="#about" class="scroll">
+                    <i class="text-white"></i>
+                </a>
             </div>
         </section>
         <!-- END HOME -->
@@ -627,6 +639,17 @@
         <!--PARTICLES ANIMATE JS-->
         <script src="js/particles.js"></script>
         <script src="js/particles.app.js"></script>
+
+        <script>
+    $(".simple-text-rotate").textrotator({
+        animation: "fade",
+        speed: 3500
+    });
+    AOS.init({
+        easing: 'ease-in-out-sine',
+        duration: 1000
+    });
+</script>
 
             </body>
 </html>
