Revamped home page and added in CNN project for AI Focus

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class="row mt-5 ">
                     <ul class="col list-unstyled list-inline mb-0 text-uppercase work_menu" id="menu-filter">
                         <li class="list-inline-item"><a class="active" data-filter="*">All</a></li>
-                        <li class="list-inline-item"><a class="" data-filter=".personal">Personal</a></li>
+                        <li class="list-inline-item"><a class="" data-filter=".aifocus">AI Focus</a></li>
                         <!---
                         <li class="list-inline-item"><a class="" data-filter=".webdesign">Webdesign</a></li>
                         <li class="list-inline-item"><a class="" data-filter=".WORK">WORK</a></li>
@@ -239,6 +239,7 @@
 
             <div class="container">
                 <div class="row mt-4 work-filter">
+                  <!-- Newsletters
                   <div class="col-lg-4 work_item personal">
                       <a href="images/works/3.jpg" class="img-zoom">
                           <div class="work_box">
@@ -266,159 +267,70 @@
                           </div>
                       </a>
                   </div>
-
-                    <div class="col-lg-4 work_item">
-                        <a href="images/works/2.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">SHAD Western 2019</p>
-                                    <h4 class="mb-0">Design Challenge: Electronic Waste Management Solution</h4>
-                                </div>
+                -->
+                <div class="col-lg-4 work_item">
+                    <a href="images/works/4.png" class="img-zoom">
+                        <div class="work_box">
+                            <div class="work_img">
+                                <img src="images/works/4.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
                             </div>
-                        </a>
-                    </div>
-
-<!--
-                    <div class="col-lg-4 work_item wordpress WORK webdesign">
-                        <a href="images/works/4.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/4.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
+                            <div class="work_detail">
+                                <p class="mb-2">TKS x Raven Telemetry</p>
+                                <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/assets/RavenTelemetryDeck.pdf">AMI Launch Recommendation Deck</a></h4>
                             </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-4 work_item seo webdesign">
-                        <a href="images/works/5.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/5.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-4 work_item devlopment webdesign">
-                        <a href="images/works/6.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/6.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                  -->
+                        </div>
+                    </a>
                 </div>
-            </div>
-<!--
-            <div class="container">
-              <div class="col-lg-4 work_item personal">
-                  <a href="images/works/3.jpg" class="img-zoom">
-                      <div class="work_box">
-                          <div class="work_img">
-                              <img src="images/works/3.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                          </div>
-                          <div class="work_detail">
-                              <p class="mb-2">Personal</p>
-                              <h4 class="mb-0">October Newsletter</h4>
-                          </div>
-                      </div>
-                  </a>
-              </div>
 
-              <div class="col-lg-4 work_item personal">
-                  <a href="images/works/1.jpg" class="img-zoom">
-                      <div class="work_box">
-                          <div class="work_img">
-                              <img src="images/works/1.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                          </div>
-                          <div class="work_detail">
-                              <p class="mb-2">Personal</p>
-                              <h4 class="mb-0"><a class="bold none work" target="blank" href="https://mailchi.mp/5d664bc9653a/freeman-jiang-september-newsletter">September Newsletter</a></h4>
-                          </div>
-                      </div>
-                  </a>
-              </div>
-
-              <div class="col-lg-4 work_item personal">
-                  <a href="images/works/2.jpg" class="img-zoom">
-                      <div class="work_box">
-                          <div class="work_img">
-                              <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                          </div>
-                          <div class="work_detail">
-                              <p class="mb-2">SHAD Western 2019</p>
-                              <h4 class="mb-0">Electronic Waste Management Design Challenge</h4>
-                          </div>
-                      </div>
-                  </a>
-              </div>
-            </div>
--->
-
-
-<!--
-
-                    <div class="col-lg-4 work_item wordpress WORK webdesign">
-                        <a href="images/works/4.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/4.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
+                <div class="col-lg-4 work_item">
+                    <a href="images/works/5.png" class="img-zoom">
+                        <div class="work_box">
+                            <div class="work_img">
+                                <img src="images/works/5.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
                             </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-4 work_item seo webdesign">
-                        <a href="images/works/5.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/5.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
+                            <div class="work_detail">
+                                <p class="mb-2">Academic Project</p>
+                                <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/cbdeca">Colonel By DECA Website</a></h4>
                             </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-4 work_item devlopment webdesign">
-                        <a href="images/works/6.jpg" class="img-zoom">
-                            <div class="work_box">
-                                <div class="work_img">
-                                    <img src="images/works/6.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                                </div>
-                                <div class="work_detail">
-                                    <p class="mb-2">Category</p>
-                                    <h4 class="mb-0">Project Title</h4>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
+
+                <div class="col-lg-4 work_item aifocus">
+                    <a href="images/works/6.png" class="img-zoom">
+                        <div class="work_box">
+                            <div class="work_img">
+                                <img src="images/works/6.jpeg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                            </div>
+                            <div class="work_detail">
+                                <p class="mb-2">AI Focus</p>
+                                <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/projects/AI/CNNs.html">Cat/Dog Convolutional Neural Network</a></h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                  </div>
+
+                <div class="row mt-4 work-filter">
+                  <div class="col-lg-4 work_item">
+                      <a href="images/works/2.jpg" class="img-zoom">
+                          <div class="work_box">
+                              <div class="work_img">
+                                  <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                              </div>
+                              <div class="work_detail">
+                                  <p class="mb-2">SHAD Western 2019</p>
+                                  <h4 class="mb-0">Design Challenge: Electronic Waste Management Solution</h4>
+                              </div>
+                          </div>
+                      </a>
+                  </div>
+
+
+                  </div>
             </div>
-          -->
+
         </section>
         <!--END WORK -->
 
@@ -433,6 +345,64 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row mt-5">
+                    <div class="col-lg-4 mt-3">
+                        <div class="rounded bg-white p-2">
+                            <div class="img_blog">
+                                <img src="images/blog/blog-4.png" class="img-fluid rounded mx-auto d-block">
+                            </div>
+                            <div class="content_blog pt-3 pb-3">
+                                <div>
+                                    <h5 class="font-weight-bold mb-0"><a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc" class="text-dark">CNNs Explained: Giving Sight to Artificial Intelligence</a></h5>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="h6 text-muted date_blog mb-0">Oct 2, 2019 <a href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold"></a></p>
+                                    <p class="mt-3 desc_blog text-muted">An intuitive, comprehensive explanation of what convolutional neural networks do and how they work.</p>
+                                    <button type="button" class="btn btn-custom"><a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc" class="mybutton">Read More...</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-3">
+                        <div class="rounded bg-white p-2">
+                            <div class="img_blog">
+                                <img src="images/blog/blog-5.png" class="img-fluid rounded mx-auto d-block">
+                            </div>
+                            <div class="content_blog pt-3 pb-3">
+                                <div>
+                                    <h5 class="font-weight-bold mb-0"><a target="blank" href="https://medium.com/the-lotus-fruit/reviving-extinct-animals-using-crispr-38d0d43e4007" class="text-dark">Reviving Extinct Animals using CRISPR</a></h5>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="h6 text-muted date_blog mb-0">Oct 2, 2019 <a href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold"></a></p>
+                                    <p class="mt-3 desc_blog text-muted">An exploration of CRISPR gene editing technologies and how they can be used to bring extinct animals back.</p>
+                                    <button type="button" class="btn btn-custom"><a target="blank" href="https://medium.com/the-lotus-fruit/reviving-extinct-animals-using-crispr-38d0d43e4007" class="mybutton">Read More...</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-3">
+                        <div class="rounded bg-white p-2">
+                            <div class="img_blog">
+                                <img src="images/blog/blog-6.jpeg" class="img-fluid rounded mx-auto d-block">
+                            </div>
+                            <div class="content_blog pt-3 pb-3">
+                                <div>
+                                    <h5 class="font-weight-bold mb-0"><a target="blank" href="https://medium.com/the-lotus-fruit/leveraging-vr-ar-and-ai-to-take-surveymonkey-to-the-next-level-191874bd38f7" class="text-dark">Leveraging VR/AR and AI to take SurveyMonkey to the Next Level</a></h5>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="h6 text-muted date_blog mb-0">Oct 2, 2019 <a href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold"></a></p>
+                                    <p class="mt-3 desc_blog text-muted">How new exponential tech might be changing the game for SurveyMonkey</p>
+                                    <button type="button" class="btn btn-custom"><a target="blank" href="https://medium.com/the-lotus-fruit/leveraging-vr-ar-and-ai-to-take-surveymonkey-to-the-next-level-191874bd38f7" class="mybutton">Read More...</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                  </div>
+
                 <div class="row mt-5">
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
@@ -486,8 +456,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </section>
