--- a/projects/AI/CNNs.html
+++ b/projects/AI/CNNs.html
@@ -87,7 +87,7 @@
                             <div class="col-lg-12">
                                 <div class="text-center header-content mx-auto">
                                     <h1 class="header-name text-white text-capitalize mb-0">Basic Feline and Canine Classifier</h1>
-                                    <p class="text-white mx-auto header-desc mt-4">Using artificial intelligence and convolutional neural networks for binary classification of dogs and cats.</p>
+                                    <p class="text-white mx-auto header-desc mt-4">Using artificial intelligence and convolutional neural networks for the binary classification of dogs and cats.</p>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="mt-3">
-                            <img src="../images/AI-1/cover.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                            <img src="images/cover.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -123,7 +123,7 @@
                             <h4 class="mt-4">Hello! <span class="text-custom font-weight-bold">I'M Kerri Deo.</span></h4>
                           -->
                             <p class="text-muted mt-4">This project is my first attempt at implementing machine learning and artificial intelligence. Using Keras and TensorFlow, I created a model that could train on labelled data and correctly identify cats and dogs with an accuracy of more than 80%. </p>
-                            <p class="text-muted mt-2">Check out the project and additional resources using the buttons below:  </p>
+                            <p class="text-muted mt-2">Check out the project and additional resources below:  </p>
 
                             <div>
                                 <ul class="mb-0 about-social list-inline mt-4">
@@ -150,16 +150,18 @@
                             <div class="col-lg-6 mt-3">
                                 <div class="rounded bg-white p-2">
                                     <div class="img_blog">
-                                        <img src="../images/AI-1/cover.jpeg" alt="" class="img-fluid rounded mx-auto d-block">
+                                      <a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc">
+                                        <img src="images/article.png" alt="" class="img-fluid rounded mx-auto d-block">
+                                      </a>
                                     </div>
                                     <div class="content_blog pt-3 pb-3">
                                         <div>
                                             <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Teaching Computers To See: CNNs</a></h5>
                                         </div>
                                         <div class="mt-3">
-                                            <p class="h6 text-muted date_blog mb-0">22 March 2018 <a href="#" class="text-custom font-weight-bold">By Freeman</a></p>
-                                            <p class="mt-3 desc_blog text-muted">Sit sagittis vulputate laoreet sodales tortor nulla lobortis bibendum netus primis fames. Lobortis ultricies.</p>
-                                            <p class="h6 mb-0"><a href="#" class="text-muted font-weight-bold">Read More...</a></p>
+                                            <p class="h6 text-muted date_blog mb-0">5 February 2020 <a href="#" class="text-custom font-weight-bold">By Freeman</a></p>
+                                            <p class="mt-3 desc_blog text-muted">An article I wrote with an intuitive explanation of how convolutional neural networks allow computers to see.</p>
+                                            <p class="h6 mb-0"><a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc" class="text-muted font-weight-bold">Read More...</a></p>
                                         </div>
                                     </div>
                                 </div>
